# genetic-algorithms-T1

./: .gitignore  CMakeLists.txt  config.h  main.cpp
cpp_project/: CMakeLists.txt  config.h
cpp_project/src/: methods.cpp
latex/: t1.aux  t1.fdb_latexmk  t1.fls  t1.out  t1.tex
src/: methods.cpp  methods.h  testRunner.cpp
util/: bitset.cpp  bitset.h  bitsetFuncs.cpp  bitsetFuncs.h  functions.h
